[package]
name = "reback"
version = "0.2.1"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rust-s3 = "0.35.1"
chrono = "0.4.39"
log = "0.4.22"
env_logger = "0.11.6"
